fixed alignments

--- a/src/style/atoms/_table.scss
+++ b/src/style/atoms/_table.scss
@@ -11,12 +11,12 @@ td {
   display: block;
 }
 
-thead tr {
-  width: 97%;
-  width: -webkit-calc(100% - 16px);
-  width: -moz-calc(100% - 16px);
-  width: calc(100% - 16px);
-}
+// thead tr {
+//   width: 97%;
+//   width: -webkit-calc(100% - 16px);
+//   width: -moz-calc(100% - 16px);
+//   width: calc(100% - 16px);
+// }
 
 tr:after {
   content: ' ';
